force-app/main/default/objects/SVMXC__Quote_Line__c/SVMXC__Quote_Line__c.object-meta.xml
<CustomObject>
    <description>In ServiceMax, Quote contains the estimated cost of a service event to be presented to a customer to get approval. A quote can be either created manually or generated automatically from the estimate lines of a service order. The estimates normally include parts, labor and other expenses.</description>
    <label>Quote Item</label>
    <nameField>
        <displayFormat>QL-{00000000}</displayFormat>
        <label>Quote Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>