force-app/main/default/objects/SVMXC__Quote_Line__c/fields/SVMXC__Line_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Line_Type__c</fullName>
    <description>Indicates if the line refers to a part, labor or expense estimate</description>
    <inlineHelpText>Indicates if the line refers to a part, labor or expense estimate</inlineHelpText>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>