force-app/main/default/objects/SVMXC__Quote_Line__c/fields/SVMXC__Quote__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Quote__c</fullName>
    <description>Name of the quote. Is a lookup to an existing quote in ServiceMax</description>
    <inlineHelpText>Name of the quote. Is a lookup to an existing quote in ServiceMax</inlineHelpText>
    <label>Service Quote</label>
    <referenceTo>SVMXC__Quote__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>