force-app/main/default/objects/SVMXC__Quote_Line__c/fields/SVMXC__Select__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Select__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to bind checkbox in List of Quote item records on Visualforce page with controller.</description>
    <inlineHelpText>Field to bind checkbox in List of Quote item records on Visualforce page with controller.</inlineHelpText>
    <label>Select</label>
    <type>Checkbox</type>
</CustomField>